# benchmarks

./: CMakeLists.txt  README.md
pfx-benchmark/: CMakeLists.txt
pfx-benchmark/bgpmon-benchmark/: CMakeLists.txt  benchmark.c  get_record.c  getusage.c
pfx-benchmark/pfx-lpfst-benchmark/: CMakeLists.txt  benchmark.c  bgp_xml_parser.py
pfx-benchmark/secpaper-bench/: CMakeLists.txt  benchmark.c  gen-prefixes.py  gen-prefixes6.py  load-bench.sh  load-bench6.sh  load_bench.c  time.c  val-bench.sh
pfx-lpfst-benchmark/: CMakeLists.txt  Makefile  Makefile.backup  benchmark.c  bgp_xml_parser.py  get_record.c
spki-benchmark/: CMakeLists.txt  add_records_line_chart.sh  collision_chain_line_chart.sh  generate-bar-chart.py  generate-graph.py  generate-line-chart.py  load_add_entry_benchmark.c  load_add_records_benchmark_draw_chart.sh  load_add_records_benchmark_draw_graph.sh  load_benchmark.c  load_get_all_benchmark_draw_chart.sh  load_get_all_collision_chain_benchmark_draw_chart.sh  lookup_all_record_bar_chart.sh  lookup_all_records_line_chart.sh  lookup_single_record_line_charts.sh  memory_benchmark.c  memory_benchmark_draw_chart.sh  memory_benchmark_draw_graph.sh  memory_benchmark_line_chart.sh
spki-benchmark/src/: CMakeLists.txt  load_add_entry_benchmark.c  load_add_entry_benchmark.c.autosave  load_get_all_benchmark.c  load_get_all_benchmark.c.autosave  memory_benchmark.c  spki_test_data.c  spki_test_data.h
util/: getusage.c
